Cleaning up the readme Added note about memory Removed temp note about maven Removed bit about installing mxj